kubernetes/jenkins-resources.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jenkins
