kubernetes/insurance-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: insurance-app-deployment
  labels:
    app: insurance-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: insurance-app
  template:
    metadata:
      labels:
        app: insurance-app
    spec:
      containers:
      - name: insurance-app
        image: skyrius6732/insurance-project:latest
        imagePullPolicy: IfNotPresent # 로컬에 없으면 가져오도록 설정함
        ports:
        - containerPort: 8080
