kubernetes/kafka-exporter.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-exporter
  namespace: monitoring # Prometheus와 같은 네임스페이스에 배포
  labels:
    app: kafka-exporter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka-exporter
  template:
    metadata:
      labels:
        app: kafka-exporter
    spec:
      hostAliases:
        - ip: "172.24.96.243"
          hostnames:
            - "kafka"
      containers:
      - name: kafka-exporter
        image: danielqsj/kafka-exporter:latest # Docker Compose에서 사용하던 이미지
        ports:
        - containerPort: 9308
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-exporter
  namespace: monitoring
  labels:
    app: kafka-exporter
spec:
  selector:
    app: kafka-exporter
  ports:
    - name: http-metrics
      protocol: TCP
      port: 9308
      targetPort: 9308
  type: ClusterIP # 클러스터 내부에서만 접근 가능하도록 ClusterIP 사용
