kubernetes/schema-registry-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: schema-registry
  namespace: kafka
spec:
  replicas: 1
  selector:
    matchLabels:
      app: schema-registry
  template:
    metadata:
      labels:
        app: schema-registry
    spec:
      volumes:
        - name: schema-registry-config
          emptyDir: {}

      containers:
        - name: schema-registry
          image: confluentinc/cp-schema-registry:7.5.0
          ports:
            - containerPort: 8081
          volumeMounts:
            - name: schema-registry-config
              mountPath: /etc/schema-registry/schema-registry.properties
              subPath: schema-registry.properties
          command: ["/bin/bash", "-c"]
          args:
            - |
              echo "Starting Schema Registry with custom config..." && \
              /usr/bin/schema-registry-start /etc/schema-registry/schema-registry.properties
          readinessProbe:
            httpGet:
              path: /subjects
              port: 8081
            initialDelaySeconds: 10
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: schema-registry
  namespace: kafka
spec:
  selector:
    app: schema-registry
  ports:
    - name: http
      port: 8081
      targetPort: 8081
